# markdown-os

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  audit.md  demo.md  example.md  hello.py  landing.html  markdown_os.spec  plan.md  pyproject.toml  vercel.json
.codex/environments/: environment-2.toml  environment.toml
.github/workflows/: desktop-release.yml  publish.yml
desktop/: electron-builder.yml  package-lock.json  package.json
desktop/scripts/: run-python-script.mjs
desktop/src/: application-menu.ts  backend.ts  dialogs.ts  launch-path.test.ts  launch-path.ts  main.ts  preload.ts  recents.ts  updater.ts
docs/: roadmap.md
docs/plans/: feature-001-pdf-export.md  feature-002-file-operations.md  feature-003-focus-mode.md  feature-ctrl-f.md  feature-dark-mode.md  feature-electron-app.md  feature-file-tabs.md  feature-file-tree-browser.md  feature-fullscreen-mermaid.md  feature-image-paste.md  feature-interactive-task-lists.md  feature-line-numbers-code-blocks.md  feature-lock-file-cleanup.md  feature-math-equations.md  feature-pypi-publishing.md  feature-read-first-mode.md  feature-showcase-example.md  feature-sidebar-and-tab-redesign.md  feature-table-styling.md  feature-themes.md  feature-unified-toc-navigation.md  feature-wysiwyg.md  web-version.md
frontend/: build.mjs  package-lock.json  package.json
frontend/src/: tiptap-bundle.js
frontend/src/extensions/: code-block-node.js  image-node.js  katex-node.js  mermaid-node.js
markdown_os/: __init__.py  app_runtime.py  cli.py  desktop.py  desktop_runtime.py  directory_handler.py  file_handler.py  server.py  workspace_session.py
markdown_os/static/: index.html  welcome.html
markdown_os/static/css/: fonts.css  styles.css  themes.css
markdown_os/static/js/: desktop-picker.js  dialogs.js  (+18 more)
markdown_os/templates/: example_template.md
scripts/: build_desktop.py  download_vendor.py  generate_macos_icon.sh  prepare_desktop_resources.py  release.py  render_svg_to_png.mjs  sync_web_editor_site.py
site/: demo-frame.html  downloads.html  index.html  package-lock.json  package.json  speed-insights.js  styles.css
site/app/: index.html
tests/: test_cli.py  test_desktop.py  test_directory_handler.py  test_file_handler.py  test_frontend_navigation_sync.py  test_prepare_desktop_resources.py  test_server.py  test_site_deployment.py  test_version.py  test_workspace_session.py
tests/fixtures/: round-trip.md
(+16 files in other folders)
