[project]
name = "markdown-os"
version = "0.1.0"
description = "Developer-focused markdown editor served from a local CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "python-multipart>=0.0.22",
    "typer>=0.23.1",
    "uvicorn[standard]>=0.40.0",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
markdown-os = "markdown_os.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markdown_os"]
