[project]
name = "markdown-os"
version = "0.2.0"
description = "Developer-focused markdown editor served from a local CLI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Elena Cabrera" }]
keywords = ["markdown", "editor", "cli", "preview", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.129.0",
    "python-multipart>=0.0.22",
    "typer>=0.23.1",
    "uvicorn[standard]>=0.40.0",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
markdown-os = "markdown_os.cli:run"

[project.urls]
Homepage = "https://github.com/elena-cabrera/markdown-os"
Repository = "https://github.com/elena-cabrera/markdown-os"
Issues = "https://github.com/elena-cabrera/markdown-os/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markdown_os"]
